tests/baselines/reference/structuralTagTypesErr1.errors.txt
tests/cases/conformance/types/structuralTags/structuralTagTypesErr1.ts(18,1): error TS2322: Type 'number & tag { y: any; }' is not assignable to type 'number & tag { x: any; }'.
  Type 'number & tag { y: any; }' is not assignable to type 'tag { x: any; }'.
tests/cases/conformance/types/structuralTags/structuralTagTypesErr1.ts(19,1): error TS2322: Type 'number & tag { x: any; }' is not assignable to type 'number & tag { y: any; }'.
  Type 'number & tag { x: any; }' is not assignable to type 'tag { y: any; }'.
tests/cases/conformance/types/structuralTags/structuralTagTypesErr1.ts(21,1): error TS2322: Type 'number' is not assignable to type 'number & tag { x: any; }'.
  Type 'number' is not assignable to type 'tag { x: any; }'.
tests/cases/conformance/types/structuralTags/structuralTagTypesErr1.ts(22,1): error TS2322: Type 'number' is not assignable to type 'number & tag { y: any; }'.
  Type 'number' is not assignable to type 'tag { y: any; }'.
tests/cases/conformance/types/structuralTags/structuralTagTypesErr1.ts(24,1): error TS2322: Type 'number' is not assignable to type 'number & tag { x: any; }'.
  Type 'number' is not assignable to type 'tag { x: any; }'.
tests/cases/conformance/types/structuralTags/structuralTagTypesErr1.ts(25,1): error TS2322: Type 'number' is not assignable to type 'number & tag { y: any; }'.
  Type 'number' is not assignable to type 'tag { y: any; }'.


==== tests/cases/conformance/types/structuralTags/structuralTagTypesErr1.ts (6 errors) ====
    export type Paired = {
        x: number & tag {x};
        y: number & tag {y};
    };
    
    
    export function isPaired(x: {x: number, y: number}): x is Paired {
        return true;
    }
    
    export function makePair(x: number, y: number): Paired {
        return {x, y} as Paired;
    }
    
    const a = makePair(0, 0);
    const b = {x: 0, y: 0};
    
    a.x = a.y; // err
    ~~~
!!! error TS2322: Type 'number & tag { y: any; }' is not assignable to type 'number & tag { x: any; }'.
!!! error TS2322:   Type 'number & tag { y: any; }' is not assignable to type 'tag { x: any; }'.
    a.y = a.x; // err
    ~~~
!!! error TS2322: Type 'number & tag { x: any; }' is not assignable to type 'number & tag { y: any; }'.
!!! error TS2322:   Type 'number & tag { x: any; }' is not assignable to type 'tag { y: any; }'.
    
    a.x = b.y; // err
    ~~~
!!! error TS2322: Type 'number' is not assignable to type 'number & tag { x: any; }'.
!!! error TS2322:   Type 'number' is not assignable to type 'tag { x: any; }'.
    a.y = b.y; // err
    ~~~
!!! error TS2322: Type 'number' is not assignable to type 'number & tag { y: any; }'.
!!! error TS2322:   Type 'number' is not assignable to type 'tag { y: any; }'.
    
    a.x = b.x; // err
    ~~~
!!! error TS2322: Type 'number' is not assignable to type 'number & tag { x: any; }'.
!!! error TS2322:   Type 'number' is not assignable to type 'tag { x: any; }'.
    a.y = b.x; // err 
    ~~~
!!! error TS2322: Type 'number' is not assignable to type 'number & tag { y: any; }'.
!!! error TS2322:   Type 'number' is not assignable to type 'tag { y: any; }'.